# snake-reinforcement-learning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FILE_OVERVIEW.md  LICENSE  QUICKSTART.md  README.md  experiments.txt  experiments_log.txt  play.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  visualize.py
.github/workflows/: ci.yml  docs.yml
models/: README.md
notebooks/: Snake_QLearning_Tutorial.ipynb
results/: README.md
scripts/: check_code_quality.py
src/: DQNAgent.py  QLearning.py  QLearningAgent.py  Snake.py  __init__.py  cli.py  config.py  demo.py  experiment_tracking.py  profiling.py  utils.py
src/Visualizations/: makeQconvergenceGraph.py
tests/: __init__.py  conftest.py  test_qlearning_agent.py  test_snake.py
